force-app/main/default/objects/BGCK__Checklist__c/BGCK__Checklist__c.object-meta.xml
<CustomObject>
    <label>Checklist</label>
    <nameField>
        <label>CheckList Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>