force-app/main/default/objects/BGCK__Checklist__c/fields/BGCK__Next_Version__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Next_Version__c</fullName>
    <label>Next Version</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>