force-app/main/default/objects/BGCK__Checklist__c/fields/BGCK__Object_Field__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Object_Field__c</fullName>
    <label>Object Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>