force-app/main/default/objects/BGCK__Checklist__c/fields/BGCK__Title__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>