force-app/main/default/objects/BGCK__Checklist__c/fields/BGCK__Version_Commit__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Version_Commit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Version Commit</label>
    <type>Checkbox</type>
</CustomField>