force-app/main/default/objects/BGCK__Checklist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>BGCK__Title__c</columns>
    <columns>NAME</columns>
    <columns>BGCK__Current_Version__c</columns>
    <columns>BGCK__Track_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>